[package]
name = "pixlzr"
description = "Pixlzr - A rust lib and CLI for the pixlzr image format"
version = "0.2.2"
edition = "2021"
authors = ["Guilherme Zaluchi <desenv@guilherme.zaluchi.com.br>"]
homepage = "https://github.com/guiga-zalu/pixlzr-rust"
repository = "https://github.com/guiga-zalu/pixlzr-rust"
include = [
	"src/**/*",
	"benches/**/*",
	"Cargo.toml",
	"readme.MD",
	"readme.*.MD",
	"LICENSE",
	"encoding.MD",
	"encoding.*.MD",
]
categories = []
keywords = ["pixlzr", "image", "compression", "qoi", "cli"]
license-file = "LICENSE"
readme = "readme.MD"
publish = true
# im-a-teapot = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
anyhow = "1.0.69"
qoi = "0.4"
clap = { version = "4.0", features = ["derive", "cargo"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench-00"
harness = false
