[package]
name = "pixlzr"
description = "Pixlzr - A rust lib and CLI for the pixlzr image format"
version = "0.2.2"
edition = "2021"
authors = ["Guilherme Zaluchi <desenv@guilherme.zaluchi.com.br>"]
homepage = "https://github.com/guiga-zalu/pixlzr-rust"
repository = "https://github.com/guiga-zalu/pixlzr-rust"
include = [
	"src/**/*",
	"benches/**/*",
	"Cargo.toml",
	"readme.MD",
	"readme.*.MD",
	"LICENSE",
	"encoding.MD",
	"encoding.*.MD",
]
categories = []
keywords = ["pixlzr", "image", "compression", "qoi", "cli"]
license-file = "LICENSE"
readme = "readme.MD"
publish = true
# im-a-teapot = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qoi = "0.4"
phf = { version = "0.11.1", features = ["macros"] }
rayon = "1.8.0"

image = { version = "0.24", optional = true }
palette = { version = "0.7.3", optional = true }

anyhow = "1.0.69"
clap = { version = "4.0", features = ["derive", "cargo"], optional = true }
fast_image_resize = "2.7.3"

[dev-dependencies]
criterion = "0.3"

[features]
image-rs = ["dep:image", "dep:palette"]
cli = ["dep:clap"]
default = ["image-rs", "cli"]

[[bench]]
name = "bench-00"
harness = false

[[bin]]
name = "pixlzr"
path = "src/bin/main.rs"
test = true
doctest = true
bench = true
doc = true
