[package]
name = "pixlzr"
description = "Pixlzr - A rust lib and CLI for the pixlzr image format"
version = "0.3.0"
edition = "2021"
authors = ["Guilherme Zaluchi <desenv@guilherme.zaluchi.com.br>"]
homepage = "https://github.com/guiga-zalu/pixlzr-rust"
repository = "https://github.com/guiga-zalu/pixlzr-rust"
include = [
	"src/**/*",
	"benches/**/*",
	"Cargo.toml",
	"readme.MD",
	"readme.*.MD",
	"LICENSE",
	"encoding.MD",
	"encoding.*.MD",
]
categories = []
keywords = ["pixlzr", "image", "compression", "qoi", "cli"]
license-file = "LICENSE"
readme = "readme.MD"
publish = true
# im-a-teapot = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qoi = "0.4"
phf = { version = "0.11.1", features = ["macros"] }
rayon = "1.8.0"

image = { version = "0.25.1", optional = true }
palette = { version = "0.7.3" }
fast_image_resize = { version = "4.1.0", optional = true }

anyhow = "1.0.69"
clap = { version = "4.0", features = ["derive", "cargo"], optional = true }

[dev-dependencies]
criterion = "0.5.1"

[features]
image-rs = ["dep:image"]
fir = ["dep:fast_image_resize", "image-rs"]
cli = ["dep:clap"]
# default = ["image-rs", "cli"]
default = ["fir", "cli"]

[[bench]]
name = "bench-00"
harness = false

[[bin]]
name = "pixlzr"
path = "src/bin/main.rs"
test = true
doctest = true
bench = true
doc = true
